--- a/index.html
+++ b/index.html
@@ -8,10 +8,31 @@
     <div class="header">
         <ul>
             <div class="container-fluid" id="headerContainer">
-            <li><p>About Me</p></li>
-            <li><p>Education</p></li>
-            <li><p>Portfolio</p></li>
-            <li style="float: right;"><p>Contact</p></li>
+            <li>
+                <div class="headerButton">
+                    <a href="#about">About Me</a>
+                </div>
+            </li>
+            <li>
+                <div class="headerButton">
+                    <a href="#education">Education</a>
+                </div>
+            </li>
+            <li>
+                <div class="dropdown">
+                    <button class="dropbtn">Portfolio</button>
+                    <div class="dropdown-content">
+                        <a href="#portfolio">Game Development and Programming</a>
+                        <a href="#test">3D Art and VFX</a>
+                        <a href="#art">Art and Graphic Design</a>
+                    </div>
+                </div>
+            </li>
+            <li style="float: right;">
+                <div class="headerButton">
+                    <a href="#contact">Contact</a>
+                </div>
+            </li>
     </div>
     </ul>
     </div>
@@ -281,7 +302,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container-fluid" id="caffeine">
+            <div class="container-fluid" id="test">
                 <h2>3D Art and VFX</h2>
                 <div class="row">
                     <div id="graffitiVideo">
@@ -299,7 +320,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container-fluid" id="graffiti">
+            <div class="container-fluid" id="art">
                 <h2>Graphic Design and Art</h2>
                 <div class="row">
                     <div id="graffitiVideo">
@@ -399,7 +420,21 @@
                 </div>
                 <br>
             </div>
-
+            <div class="container-fluid" id="contact">
+                <h2>Contact</h2>
+                <div class="row">
+                    <div id="graffitiVideo">
+                        <p id="caffeineContents">
+                            If you are interested in hiring me for your project or are an employer or recruiter and would like to contact me about a role, 
+                            please contact me via email or LinkedIn.<br /><br />
+                            You can find my CV <a href="https://drive.google.com/file/d/19gyNn9kps97FXlNRzDNudAjnyhU-6RIY/view?usp=sharing" target="_blank">here.</a><br /><br />
+                            Email: <a href="mailto: jamiedarbon64@gmail.com" target="_blank">jamiedarbon64@gmail.com</a><br />
+                            Telephone: 07738 095792<br />
+                            LinkedIn: <a href="https://www.linkedin.com/in/jamie-darbon-6b9781252/" target="_blank">https://www.linkedin.com/in/jamie-darbon-6b9781252/</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="footer">
                 <div class="container-fluid" id="footerContainer">
