--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 <ul>
                                     <li>Art - A</li>
                                     <li>French - C</li>
-                                    <li>Mathematics - D</li>
+                                    <li>Mathematics - C</li>
                                 </ul>
                             </div>
                         </div>
@@ -146,6 +146,28 @@
                 </div>
             </div>
             <div class="container-fluid" id="graffiti">
+                <h2>PSSPSSPSS (2024 - Ongoing)</h2>
+                <h3>Solo Project - Programming, Art, 3D Modelling</h3>
+                <div class="row">
+                    <div id="graffitiVideo">
+                        <p id="graffitiContents">
+                            <iframe width="420" height="315"
+                                    src="https://www.youtube.com/embed/CY78EmNlEvo ">
+                            </iframe>
+                            PSSPSSPSS.<br /> <br />
+                            In this project, I handled all the programming, design, modelling and art myself. The project required me to learn how to create my own shaders in Unity through
+                            the use of HLSL coding, in which I created the cel shader and outline shader you can see in the accompanying video. As previously mentioned, this project
+                            was made with the Unity engine, meaning the majority of the code outside of shaders was written in C#. I also used my existing skills in Blender to create the
+                            models which you can see in the game. Graffiti Street is in active development and is being updated outside of the scope of university, now that I have
+                            graduated.<br />
+                            <br />
+                            You can find my final report for the project
+                            <a href="https://drive.google.com/file/d/18cX0Z23H9US1nIlUBWhC_q-xZweHS0Az/view?usp=sharing" target="_blank" rel="noopener noreferrer">here</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid" id="caffeine">
                 <h2>Graffiti Street (2023)</h2>
                 <h3>Solo Project - Programming, Art, 3D Modelling</h3>
                 <div class="row">
@@ -169,7 +191,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container-fluid" id="caffeine">
+            <div class="container-fluid" id="graffiti">
                 <h2>Caff3.ine (2022)</h2>
                 <h3>Group Project - Programming, Environment Design</h3>
                 <div class="row">
@@ -187,7 +209,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container-fluid" id="graffiti">
+            <div class="container-fluid" id="caffeine">
                 <h2>Snip and Shear (2023)</h2>
                 <h3>Group Project - Level Design, Animation, 3D Modelling</h3>
                 <div class="row">
@@ -206,7 +228,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container-fluid" id="caffeine">
+            <div class="container-fluid" id="graffiti">
                 <h2>Untitled Mascot Platformer (2022)</h2>
                 <h3>Solo Project - Programming, Character Design, Art, Animation</h3>
                 <div class="row">
@@ -244,7 +266,7 @@
                 </div>
                 <br>
             </div>
-            <div class="container-fluid" id="graffiti">
+            <div class="container-fluid" id="caffeine">
                 <h2>Dual Runner (2022)</h2>
                 <h3>Group Project - Level Design, Game Design, Animation</h3>
                 <div class="row">
@@ -264,7 +286,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container-fluid" id="caffeine">
+            <div class="container-fluid" id="graffiti">
                 <h2>Property Tycoon (2022)</h2>
                 <h3>Group Project - Programming, UI, Design</h3>
                 <div class="row">
@@ -284,7 +306,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container-fluid" id="graffiti">
+            <div class="container-fluid" id="caffeine">
                 <h2>Ground Control (2020)</h2>
                 <h3>Solo Project - Level Design, Game Design, Programming</h3>
                 <div class="row">
@@ -427,10 +449,10 @@
                         <p id="caffeineContents">
                             If you are interested in hiring me for your project or are an employer or recruiter and would like to contact me about a role, 
                             please contact me via email or LinkedIn.<br /><br />
-                            You can find my CV <a href="https://drive.google.com/file/d/19gyNn9kps97FXlNRzDNudAjnyhU-6RIY/view?usp=sharing" target="_blank">here.</a><br /><br />
+                            You can find my CV <a href="https://drive.google.com/file/d/1iAS6_0O0-XWDOORpj_4Pfi_xghZ8CcFe/view?usp=sharing" target="_blank">here.</a><br /><br />
                             Email: <a href="mailto: jamiedarbon64@gmail.com" target="_blank">jamiedarbon64@gmail.com</a><br />
                             Telephone: 07738 095792<br />
-                            LinkedIn: <a href="https://www.linkedin.com/in/jamie-darbon-6b9781252/" target="_blank">https://www.linkedin.com/in/jamie-darbon-6b9781252/</a>
+                            LinkedIn: <a href="https://www.linkedin.com/in/jamiedarbon/" target="_blank">https://www.linkedin.com/in/jamiedarbon/</a>
                         </p>
                     </div>
                 </div>
