--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container-fluid" id="test">
+            <div class="container-fluid" id="graffiti">
                 <h2>3D Art and VFX</h2>
                 <div class="row">
                     <div id="graffitiVideo">
