--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <div id="graffitiVideo">
                         <p id="graffitiContents">
                             <iframe width="420" height="315"
-                                    src="https://www.youtube.com/embed/CY78EmNlEvo ">
+                                    src="https://youtu.be/CY78EmNlEvo">
                             </iframe>
                             PSSPSSPSS.<br /> <br />
                             In this project, I handled all the programming, design, modelling and art myself. The project required me to learn how to create my own shaders in Unity through
