--- a/index.html
+++ b/index.html
@@ -146,28 +146,6 @@
                 </div>
             </div>
             <div class="container-fluid" id="graffiti">
-                <h2>PSSPSSPSS (2024 - Ongoing)</h2>
-                <h3>Solo Project - Programming, Art, 3D Modelling</h3>
-                <div class="row">
-                    <div id="graffitiVideo">
-                        <p id="graffitiContents">
-                            <iframe width="420" height="315"
-                                    src="https://youtu.be/CY78EmNlEvo">
-                            </iframe>
-                            PSSPSSPSS.<br /> <br />
-                            In this project, I handled all the programming, design, modelling and art myself. The project required me to learn how to create my own shaders in Unity through
-                            the use of HLSL coding, in which I created the cel shader and outline shader you can see in the accompanying video. As previously mentioned, this project
-                            was made with the Unity engine, meaning the majority of the code outside of shaders was written in C#. I also used my existing skills in Blender to create the
-                            models which you can see in the game. Graffiti Street is in active development and is being updated outside of the scope of university, now that I have
-                            graduated.<br />
-                            <br />
-                            You can find my final report for the project
-                            <a href="https://drive.google.com/file/d/18cX0Z23H9US1nIlUBWhC_q-xZweHS0Az/view?usp=sharing" target="_blank" rel="noopener noreferrer">here</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="container-fluid" id="caffeine">
                 <h2>Graffiti Street (2023)</h2>
                 <h3>Solo Project - Programming, Art, 3D Modelling</h3>
                 <div class="row">
@@ -191,7 +169,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container-fluid" id="graffiti">
+            <div class="container-fluid" id="caffeine">
                 <h2>Caff3.ine (2022)</h2>
                 <h3>Group Project - Programming, Environment Design</h3>
                 <div class="row">
@@ -209,7 +187,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container-fluid" id="caffeine">
+            <div class="container-fluid" id="graffiti">
                 <h2>Snip and Shear (2023)</h2>
                 <h3>Group Project - Level Design, Animation, 3D Modelling</h3>
                 <div class="row">
@@ -228,7 +206,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container-fluid" id="graffiti">
+            <div class="container-fluid" id="caffeine">
                 <h2>Untitled Mascot Platformer (2022)</h2>
                 <h3>Solo Project - Programming, Character Design, Art, Animation</h3>
                 <div class="row">
@@ -266,7 +244,7 @@
                 </div>
                 <br>
             </div>
-            <div class="container-fluid" id="caffeine">
+            <div class="container-fluid" id="graffiti">
                 <h2>Dual Runner (2022)</h2>
                 <h3>Group Project - Level Design, Game Design, Animation</h3>
                 <div class="row">
@@ -286,7 +264,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container-fluid" id="graffiti">
+            <div class="container-fluid" id="caffeine">
                 <h2>Property Tycoon (2022)</h2>
                 <h3>Group Project - Programming, UI, Design</h3>
                 <div class="row">
@@ -306,7 +284,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container-fluid" id="caffeine">
+            <div class="container-fluid" id="graffiti">
                 <h2>Ground Control (2020)</h2>
                 <h3>Solo Project - Level Design, Game Design, Programming</h3>
                 <div class="row">
@@ -324,7 +302,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container-fluid" id="graffiti">
+            <div class="container-fluid" id="test">
                 <h2>3D Art and VFX</h2>
                 <div class="row">
                     <div id="graffitiVideo">
