--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <p style="text-align:left;">Game Developer | Artist | Programmer</p>
                     <h1 style="text-align:left; display:inline;">JAMIE<br>DARBON<h2 style="display: inline; font-family: Assistant; font-size: 24px;">BSc</h2></h1>
                     <p style="text-align:left;">
-                        Jamie Darbon is a Game Developer living in Brighton, England.<br>In 2023, Jamie graduated from the University of Sussex
+                        Jamie Darbon is a Game Developer living in Dover, England.<br>In 2023, Jamie graduated from the University of Sussex
                         with a First Class Honours degree in "Games and Multimedia Environments".
                     </p>
                 </div>
@@ -65,7 +65,7 @@
                         computers and video games, which have fueled my professional development and informed
                         my career choices. Along with developing artistic skills, I spent a lot of time growing up
                         developing technical skills relating to game development and am proficient in various
-                        coding languages such as C#, HLSL, Java and Javascript, as well as some limited experience with C, C++ and Unreal Engine.
+                        coding languages such as C#, HLSL, Java and Javascript, as well as some experience with C, C++ and Unreal Engine.
                         <br />
                         <br />
                         In my spare time, I like to work on a range of creative projects such as video editing, art, and
@@ -143,6 +143,27 @@
                         You can find my GitHub portfolio at: <a href="https://github.com/jamiedarbon">https://github.com/jamiedarbon</a><br />
                         You can find my ArtStation portfolio at: <a href="https://www.artstation.com/sleepyboi">https://www.artstation.com/sleepyboi</a>
                     </p>
+                </div>
+            </div>
+            <div class="container-fluid" id="graffiti">
+                <h2>PSSPSSPSS (2024-Present)</h2>
+                <h3>Solo Project - Programming, Art, 3D Modelling</h3>
+                <div class="row">
+                    <div id="graffitiVideo">
+                        <p id="graffitiContents">
+                            <iframe width="420" height="315"
+                                    src="https://youtu.be/CY78EmNlEvo">
+                            </iframe>
+                            Graffiti Street is the project I worked on for my final dissertation at the University of Sussex. In this project, I aimed to create a game which utilises
+                            modern technologies to provide the player with an environment in which they could interact with the game world by drawing onto it. It is for this reason that
+                            the theme of graffiti was chosen.<br /> <br />
+                            In this project, I handled all the programming, design, modelling and art myself. The project required me to learn how to create my own shaders in Unity through
+                            the use of HLSL coding, in which I created the cel shader and outline shader you can see in the accompanying video. As previously mentioned, this project
+                            was made with the Unity engine, meaning the majority of the code outside of shaders was written in C#. I also used my existing skills in Blender to create the
+                            models which you can see in the game. Graffiti Street is in active development and is being updated outside of the scope of university, now that I have
+                            graduated.<br />
+                        </p>
+                    </div>
                 </div>
             </div>
             <div class="container-fluid" id="graffiti">
@@ -425,7 +446,7 @@
                 <div class="row">
                     <div id="graffitiVideo">
                         <p id="caffeineContents">
-                            If you are interested in hiring me for your project or are an employer or recruiter and would like to contact me about a role, 
+                            If you are interested in hiring me for your project or are an employer or recruiter and would like to contact me about a role,
                             please contact me via email or LinkedIn.<br /><br />
                             You can find my CV <a href="https://drive.google.com/file/d/1iAS6_0O0-XWDOORpj_4Pfi_xghZ8CcFe/view?usp=sharing" target="_blank">here.</a><br /><br />
                             Email: <a href="mailto: jamiedarbon64@gmail.com" target="_blank">jamiedarbon64@gmail.com</a><br />
