--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
                 <h3>Solo Project - Programming, Art, 3D Modelling</h3>
                 <div class="row">
                     <div id="graffitiVideo">
-                        <p id="graffitiContents">
+                        <p id="caffeineContents">
                             <iframe width="420" height="315"
-                                    src="https://youtu.be/CY78EmNlEvo">
+                                    src="https://www.youtube.com/embed/CY78EmNlEvo?si=EVvwYyJKrJxMB814">
                             </iframe>
                             Graffiti Street is the project I worked on for my final dissertation at the University of Sussex. In this project, I aimed to create a game which utilises
                             modern technologies to provide the player with an environment in which they could interact with the game world by drawing onto it. It is for this reason that
