PSSPSSPSS section update

--- a/index.html
+++ b/index.html
@@ -152,16 +152,13 @@
                     <div id="graffitiVideo">
                         <p id="caffeineContents">
                             <iframe width="420" height="315"
-                                    src="https://www.youtube.com/embed/CY78EmNlEvo?si=EVvwYyJKrJxMB814">
+                                    src="https://www.youtube.com/embed/CY78EmNlEvo">
                             </iframe>
-                            Graffiti Street is the project I worked on for my final dissertation at the University of Sussex. In this project, I aimed to create a game which utilises
-                            modern technologies to provide the player with an environment in which they could interact with the game world by drawing onto it. It is for this reason that
-                            the theme of graffiti was chosen.<br /> <br />
-                            In this project, I handled all the programming, design, modelling and art myself. The project required me to learn how to create my own shaders in Unity through
-                            the use of HLSL coding, in which I created the cel shader and outline shader you can see in the accompanying video. As previously mentioned, this project
-                            was made with the Unity engine, meaning the majority of the code outside of shaders was written in C#. I also used my existing skills in Blender to create the
-                            models which you can see in the game. Graffiti Street is in active development and is being updated outside of the scope of university, now that I have
-                            graduated.<br />
+                            PSSPSSPSS is currently my main project. I am aiming to create a game inspired by the "Ape Escape" franchise that is of appropriate scale while still being 
+                            small enough that it is feasible for me to develop fully on my own and publish onto online storefronts such as Steam and Itch.<br /> <br />
+                            I am the sole contributor to the project and am working on all of the programming, models, sounds and design myself to provide myself with experience and 
+                            a shipped title so that I have more applicable and demonstrable experience to show to potential employers in future.<br /><br />
+                            The full GitHub repository for the project can be found <a href="https://github.com/jamiedarbon/PSSPSSPSSS" target="_blank" rel="noopener noreferrer">here</a>
                         </p>
                     </div>
                 </div>
