--- a/index.html
+++ b/index.html
@@ -179,8 +179,7 @@
                             In this project, I handled all the programming, design, modelling and art myself. The project required me to learn how to create my own shaders in Unity through
                             the use of HLSL coding, in which I created the cel shader and outline shader you can see in the accompanying video. As previously mentioned, this project
                             was made with the Unity engine, meaning the majority of the code outside of shaders was written in C#. I also used my existing skills in Blender to create the
-                            models which you can see in the game. Graffiti Street is in active development and is being updated outside of the scope of university, now that I have
-                            graduated.<br />
+                            models which you can see in the game.<br />
                             <br />
                             You can find my final report for the project
                             <a href="https://drive.google.com/file/d/18cX0Z23H9US1nIlUBWhC_q-xZweHS0Az/view?usp=sharing" target="_blank" rel="noopener noreferrer">here</a>
